data/derived/comb/progs/unify/prog7265.ml.out
Characters 45-57:
  let (a,b) = addHelp(n,0) in
              ^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a * 'b
